Fix css on mobile

--- a/public/stylesheets/skills.css
+++ b/public/stylesheets/skills.css
@@ -8,6 +8,10 @@
     justify-content: center;
 }
 
+.skills-container img {
+    display: none;
+}
+
 .skills-content {
     padding: 10px 10px;
     background: lightgray;
@@ -16,15 +20,9 @@
     margin-top: 30px;
     display: flex;
     flex-direction: row;
-    height: 250px;
-    overflow-y: auto;
+    height: auto;
 }
 
-.skills-content img {
-    max-width: 80%;
-    max-height: 80%;
-    align-self: center;
-}
 
 .content-explain {
   width: 100%;
@@ -34,12 +32,21 @@
 
 .content-explain h1{
     margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 @media (min-width: 1025px) {
     .skills-container {
         flex-direction: row;
         flex-wrap: wrap;
+    }
+
+    .skills-container img{
+        display: block;
+        max-width: 80%;
+        max-height: 80%;
+        align-self: center;
+    
     }
 
     .skills-content {
